<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciaSesion"
        android:fontFamily="@font/unicaone"
        android:textSize="50dp"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/nickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickName"
        android:text="@string/Carolina"/>

    <EditText
        android:id="@+id/contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/contraseña"
        android:text="@string/contra"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:background="#890E4F"
        android:layout_gravity="center"
        android:onClick="valida"
        />

</LinearLayout>